src/recipe/snapshots/rattler_build__recipe__parser__tests__context_not_mapping.snap
---
source: src/recipe/parser.rs
expression: err
---
  × Failed to parse recipe

Error:   × Parsing: expected a mapping.
   ╭─[2:18]
 1 │ 
 2 │         context: "not-mapping"
   ·                  ──────┬──────
   ·                        ╰── here
 3 │ 
   ╰────
  help: `context` must always be a mapping

